c4prj2_input/grade.txt
Grading at Wed Dec 25 13:59:11 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:39:10: error: passing argument 1 of ‘exit’ makes integer from pointer without a cast [-Werror=int-conversion]
     exit(NULL);
          ^
In file included from deck.h:3:0,
                 from future.h:3,
                 from input.c:1:
/usr/include/stdlib.h:543:13: note: expected ‘int’ but argument is of type ‘void *’
 extern void exit (int __status) __THROW __attribute__ ((__noreturn__));
             ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
